--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Emerson | Linktree</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
+    <link rel="icon" href="RT logo NoBG.png" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
@@ -22,10 +22,10 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+      <img src="RT logo NoBG.png" alt="Profile Picture">
     </a>
 
-    <div class="overlay" id="popup">
+    <!-- <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
           <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
@@ -37,10 +37,10 @@
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
-    </div>
+    </div> -->
 
     <div id="userName">
-      @JohnEmerson1406
+      Round Table DTU
     </div>
 
     <div id="links">
@@ -65,7 +65,7 @@
     </div>
 
     <div id="hashtag">
-      #SejaFeliz❤
+      #RoundTableDTU
     </div>
   </body>
 </html>
