--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/JohnEmerson1406" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
+      <a class="link" href="/" target="_blank">
+        <i class="">&nbsp;</i>To Be Added....
       </a>
-      <a class="link" href="https://www.linkedin.com/in/johnemerson1406" target="_blank">
+      <!-- <a class="link" href="https://www.linkedin.com/in/johnemerson1406" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
       </a>
       <a class="link" href="https://www.facebook.com/JohnEmerson1406" target="_blank">
@@ -61,11 +61,11 @@
       </a>
       <a class="link" href="https://myanimelist.net/profile/JohnEmerson1406" target="_blank">
         <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
-      </a>
+      </a> -->
     </div>
 
     <div id="hashtag">
-      #RoundTableDTU
+      #Aurora2.0
     </div>
   </body>
 </html>
