--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
+    <title>Aurora 2.0</title>
     <!-- Favicon -->
     <link rel="icon" href="RT logo NoBG.png" type="image/x-icon" />
     <!-- Font Awesome icons -->
