--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
     </div>
 
     <div id="links">
-      <a class="link" href="/" target="_blank">
-        <i class="">&nbsp;</i>To Be Added....
+      <a class="link" href="https://dare2compete.com/competition/capture-the-flag-aurora-20-delhi-technological-university-dtu-new-delhi-271601?lb=JDQE7l5" target="_blank">
+        <i class="">&nbsp;</i>Capture the Flag Registration
       </a>
-      <!-- <a class="link" href="https://www.linkedin.com/in/johnemerson1406" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
+      <a class="link" href="https://link.roundtabledtu.com/CTFGroup1" target="_blank">
+        <i class=""">&nbsp;</i>Capture the Flag Queries Group
       </a>
-      <a class="link" href="https://www.facebook.com/JohnEmerson1406" target="_blank">
+      <!-- <a class="link" href="https://www.facebook.com/JohnEmerson1406" target="_blank">
         <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnemerson1406" target="_blank">
+      </a> -->
+      <!-- <a class="link" href="https://www.instagram.com/johnemerson1406" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://twitter.com/JohnEmerson1406" target="_blank">
+      </a> -->
+      <!-- <a class="link" href="https://twitter.com/JohnEmerson1406" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
       <a class="link" href="https://myanimelist.net/profile/JohnEmerson1406" target="_blank">
