--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
     <!-- End of Parallax Pixel Background Animation -->
 
-    <a id="profilePicture" href="#popup">
+    <a id="profilePicture" href="www.roundtabledtu.com">
       <img src="RT logo NoBG.png" alt="Profile Picture">
     </a>
 
