--- a/index.html
+++ b/index.html
@@ -44,24 +44,16 @@
     </div>
 
     <div id="links">
+      <a class="link" href="https://chat.whatsapp.com/CW6iTWh0Aab9u6bkof5J4Q" target="_blank">
+        <i class="">&nbsp;</i>Aurora Queries Group
+      </a>
       <a class="link" href="https://dare2compete.com/competition/capture-the-flag-aurora-20-delhi-technological-university-dtu-new-delhi-271601?lb=JDQE7l5" target="_blank">
         <i class="">&nbsp;</i>Capture the Flag Registration
       </a>
       <a class="link" href="https://link.roundtabledtu.com/CTFGroup1" target="_blank">
-        <i class=""">&nbsp;</i>Capture the Flag Queries Group
+        <i class="">&nbsp;</i>Capture the Flag Queries Group
       </a>
-      <!-- <a class="link" href="https://www.facebook.com/JohnEmerson1406" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a> -->
-      <!-- <a class="link" href="https://www.instagram.com/johnemerson1406" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a> -->
-      <!-- <a class="link" href="https://twitter.com/JohnEmerson1406" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/JohnEmerson1406" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
-      </a> -->
+      
     </div>
 
     <div id="hashtag">
