--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
       <a class="link" href="https://link.roundtabledtu.com/CTFGroup1" target="_blank">
         <i class="">&nbsp;</i>Capture the Flag Queries Group
       </a>
-      
+      <a class="link" href="https://dare2compete.com/hackathon/roundtable-hackathon-aurora-20-delhi-technological-university-dtu-new-delhi-272006?lb=FNThmsB" target="_blank">
+        <i class="">&nbsp;</i>Hackathon Registration
+      </a>
+      <a class="link" href="https://chat.whatsapp.com/DNT9PhaKAQA8T4VaumYHdA" target="_blank">
+        <i class="">&nbsp;</i>Hackathon Queries Group
+      </a>
     </div>
 
     <div id="hashtag">
