--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
       <a class="link" href="https://chat.whatsapp.com/DNT9PhaKAQA8T4VaumYHdA" target="_blank">
         <i class="">&nbsp;</i>Hackathon Queries Group
       </a>
+      <a class="link" href="https://dare2compete.com/workshop/hack-n-slash-aurora-20-round-table-delhi-technological-university-271937" target="_blank">
+        <i class="">&nbsp;</i> Hack-N-Slash : Special Workshop
+      </a>
+      <a class="link" href="https://chat.whatsapp.com/GLS4SKvJWuSCkm7bdiweib" target="_blank">
+        <i class="">&nbsp;</i>Hack-N-Slash Queries Group
+      </a>
     </div>
 
     <div id="hashtag">
