--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       <a class="link" href="https://chat.whatsapp.com/DNT9PhaKAQA8T4VaumYHdA" target="_blank">
         <i class="">&nbsp;</i>Hackathon Queries Group
       </a>
+      
+      <a class="link" href="https://dare2compete.com/hackathon/codefiesta-aurora-20-272671" target="_blank">
+        <i class="">&nbsp;</i>CodeFiesta Registration
+      </a>
       <a class="link" href="https://dare2compete.com/workshop/hack-n-slash-aurora-20-round-table-delhi-technological-university-271937" target="_blank">
         <i class="">&nbsp;</i> Hack-N-Slash : Special Workshop
       </a>
